Добавить статистику по сообщениям
