# internal/api/subscription_handlers.go
@@ -94,11 +94,6 @@ func (a *Api) UpdateSubscription(w http.ResponseWriter, r *http.Request, id stri
 
 // SubscriptionStats implements generated.ServerInterface.
 func (a *Api) SubscriptionStats(w http.ResponseWriter, r *http.Request, id string) {
-	counts, err := a.app.SubscriptionRepository.CountByStatuses(id)
-	if err != nil {
-		respond.BadRequest(w, "Не могу получить статистику %v", err)
-		return
-	}
-
-	respond.WithMap(w, counts)
+	// редиректим в другую функцию
+	a.StatsBySubscriptionId(w, r, id)
 }
